<resources>
    <string name="app_name">Group14_InClass02</string>
    <string name="discounted_price">Discounted Price:</string>
    <string name="clear">Clear</string>
    <string name="discount">Discount:</string>
    <string name="ticket_price">Ticket Price:</string>
    <string name="calculate">Calculate</string>
    <string name="_5">5%</string>
    <string name="_50">50%</string>
    <string name="_20">20%</string>
    <string name="_15">15%</string>
    <string name="_10">10%</string>
    <string name="enter_ticket_price">Enter Ticket Price</string>
</resources>